apps/nas/vpn-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vpn-gateway
  namespace: vpn-gateway
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_absolutist_it:=absolutist.it}
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "vpn-gateway.${domain_absolutist_it:=absolutist.it}"
  - "vpn-gateway.${domain_wahoo_li:=wahoo.li}"
  rules:
  - backendRefs:
    - name: vpn-gateway-ui
      port: 8080
